--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,14 +1,13 @@
 .button {
-  color: #ca3737;
-  background-color: #f5f5f5;
+  color: white;
+  background-color: #B71C1C;
   width: 100%;
-  margin: 0;
-  padding: 10px 0;
   font-family: inherit;
   font-size: 100%;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  text-shadow: 0 2px 0 white;
-  border-radius: 4px;
-  height: 45px;
-  margin: 7px 0;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  text-shadow: 0 1px 0 #444;
+  border-radius: 2px;
+  border: 0;
+  height: 40px;
+  margin: 5px 0;
 }
