--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -24,7 +24,7 @@
 }
 
 .header-input {
-  background-color: #fcfcfc;
+  background-color: #FFEBEE;
   border: none;
   outline: none;
   height: 40px;
