--- a/src/Components/Section/Section.css
+++ b/src/Components/Section/Section.css
@@ -1,14 +1,14 @@
 .section {
-  background-color: #fcfcfc;
+  background-color: #EEEEEE;
   width: 90%;
   margin: 15px auto;
-  padding: 10px;
+  padding: 5px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   border-radius: 2px;
 }
 
 .section-header {
-  margin: 0 0 10px 5px;
+  margin: 0 0 3px 5px;
   font-size: 180%;
 }
 
